// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ResourcesItem component renders with title and url: showing url in place of description 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResourcesItem
    resource={
      Object {
        "ams:purl": "http://acc.ergens",
        "dcat:accessURL": "http://ergens",
        "dcat:mediaType": "n/a",
        "dct:title": "Titel",
        "foaf:isPrimaryTopicOf": Object {},
      }
    }
    schemaProps={
      Object {
        "ams:distributionType": Object {
          "enum": Array [
            "api",
            "file",
            "web",
          ],
          "enumNames": Array [
            "API/Service",
            "Bestand",
            "Website",
          ],
        },
        "dcat:mediaType": Object {
          "enum": Array [
            "n/a",
            "text/csv",
            "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
            "application/vnd.geo+json",
            "application/gml+xml",
            "text/html",
            "application/json",
            "application/pdf",
            "image/png",
            "application/vnd.ms-excel",
            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
            "application/xml",
            "application/octet-stream",
          ],
          "enumNames": Array [
            "",
            "CSV",
            "DOCX",
            "GeoJSON",
            "GML",
            "HTML",
            "JSON",
            "PDF",
            "PNG",
            "XLS",
            "XLSX",
            "XML",
            "Anders",
          ],
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="resources-item__modified"
        >
          
        </div>,
        <div
          className="resources-item__file-size"
        >
          
        </div>,
        <div
          className="resources-item__title"
        >
          Titel
        </div>,
        <div
          className="resources-item__description"
        >
          <span
            className="resources-item__file-type resources-item__file-type--anders"
          >
            Anders
          </span>
          <span
            className="resources-item__description-text"
          >
            http://acc.ergens
          </span>
        </div>,
      ],
      "className": "resources-item",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "resources-item__modified",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "resources-item__file-size",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Titel",
          "className": "resources-item__title",
        },
        "ref": null,
        "rendered": "Titel",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="resources-item__file-type resources-item__file-type--anders"
            >
              Anders
            </span>,
            <span
              className="resources-item__description-text"
            >
              http://acc.ergens
            </span>,
          ],
          "className": "resources-item__description",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Anders",
              "className": "resources-item__file-type resources-item__file-type--anders",
            },
            "ref": null,
            "rendered": "Anders",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "http://acc.ergens",
              "className": "resources-item__description-text",
            },
            "ref": null,
            "rendered": "http://acc.ergens",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="resources-item__modified"
          >
            
          </div>,
          <div
            className="resources-item__file-size"
          >
            
          </div>,
          <div
            className="resources-item__title"
          >
            Titel
          </div>,
          <div
            className="resources-item__description"
          >
            <span
              className="resources-item__file-type resources-item__file-type--anders"
            >
              Anders
            </span>
            <span
              className="resources-item__description-text"
            >
              http://acc.ergens
            </span>
          </div>,
        ],
        "className": "resources-item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "resources-item__modified",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "resources-item__file-size",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Titel",
            "className": "resources-item__title",
          },
          "ref": null,
          "rendered": "Titel",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="resources-item__file-type resources-item__file-type--anders"
              >
                Anders
              </span>,
              <span
                className="resources-item__description-text"
              >
                http://acc.ergens
              </span>,
            ],
            "className": "resources-item__description",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Anders",
                "className": "resources-item__file-type resources-item__file-type--anders",
              },
              "ref": null,
              "rendered": "Anders",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "http://acc.ergens",
                "className": "resources-item__description-text",
              },
              "ref": null,
              "rendered": "http://acc.ergens",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`The ResourcesItem component renders with title, description and date: leaving out file size for websites and APIs 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResourcesItem
    resource={
      Object {
        "ams:distributionType": "web",
        "ams:purl": "http://acc.ergens",
        "dcat:accessURL": "http://ergens",
        "dcat:byteSize": "0",
        "dcat:mediaType": "n/a",
        "dct:description": "omschrijving",
        "dct:title": "Titel",
        "foaf:isPrimaryTopicOf": Object {},
      }
    }
    schemaProps={
      Object {
        "ams:distributionType": Object {
          "enum": Array [
            "api",
            "file",
            "web",
          ],
          "enumNames": Array [
            "API/Service",
            "Bestand",
            "Website",
          ],
        },
        "dcat:mediaType": Object {
          "enum": Array [
            "n/a",
            "text/csv",
            "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
            "application/vnd.geo+json",
            "application/gml+xml",
            "text/html",
            "application/json",
            "application/pdf",
            "image/png",
            "application/vnd.ms-excel",
            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
            "application/xml",
            "application/octet-stream",
          ],
          "enumNames": Array [
            "",
            "CSV",
            "DOCX",
            "GeoJSON",
            "GML",
            "HTML",
            "JSON",
            "PDF",
            "PNG",
            "XLS",
            "XLSX",
            "XML",
            "Anders",
          ],
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="resources-item__modified"
        >
          
        </div>,
        <div
          className="resources-item__file-size"
        >
          
        </div>,
        <div
          className="resources-item__title"
        >
          Titel
        </div>,
        <div
          className="resources-item__description"
        >
          <span
            className="resources-item__file-type resources-item__file-type--website"
          >
            Website
          </span>
          <span
            className="resources-item__description-text"
          >
            omschrijving
          </span>
        </div>,
      ],
      "className": "resources-item",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "resources-item__modified",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "resources-item__file-size",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Titel",
          "className": "resources-item__title",
        },
        "ref": null,
        "rendered": "Titel",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="resources-item__file-type resources-item__file-type--website"
            >
              Website
            </span>,
            <span
              className="resources-item__description-text"
            >
              omschrijving
            </span>,
          ],
          "className": "resources-item__description",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Website",
              "className": "resources-item__file-type resources-item__file-type--website",
            },
            "ref": null,
            "rendered": "Website",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "omschrijving",
              "className": "resources-item__description-text",
            },
            "ref": null,
            "rendered": "omschrijving",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="resources-item__modified"
          >
            
          </div>,
          <div
            className="resources-item__file-size"
          >
            
          </div>,
          <div
            className="resources-item__title"
          >
            Titel
          </div>,
          <div
            className="resources-item__description"
          >
            <span
              className="resources-item__file-type resources-item__file-type--website"
            >
              Website
            </span>
            <span
              className="resources-item__description-text"
            >
              omschrijving
            </span>
          </div>,
        ],
        "className": "resources-item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "resources-item__modified",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "resources-item__file-size",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Titel",
            "className": "resources-item__title",
          },
          "ref": null,
          "rendered": "Titel",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="resources-item__file-type resources-item__file-type--website"
              >
                Website
              </span>,
              <span
                className="resources-item__description-text"
              >
                omschrijving
              </span>,
            ],
            "className": "resources-item__description",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Website",
                "className": "resources-item__file-type resources-item__file-type--website",
              },
              "ref": null,
              "rendered": "Website",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "omschrijving",
                "className": "resources-item__description-text",
              },
              "ref": null,
              "rendered": "omschrijving",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`The ResourcesItem component renders with title, description, format, file size and date 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResourcesItem
    resource={
      Object {
        "ams:distributionType": "file",
        "ams:purl": "http://acc.ergens",
        "dcat:accessURL": "http://ergens",
        "dcat:byteSize": "666",
        "dcat:mediaType": "application/pdf",
        "dct:description": "omschrijving",
        "dct:title": "Titel",
        "foaf:isPrimaryTopicOf": Object {
          "dct:modified": "2017-11-30",
        },
      }
    }
    schemaProps={
      Object {
        "ams:distributionType": Object {
          "enum": Array [
            "api",
            "file",
            "web",
          ],
          "enumNames": Array [
            "API/Service",
            "Bestand",
            "Website",
          ],
        },
        "dcat:mediaType": Object {
          "enum": Array [
            "n/a",
            "text/csv",
            "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
            "application/vnd.geo+json",
            "application/gml+xml",
            "text/html",
            "application/json",
            "application/pdf",
            "image/png",
            "application/vnd.ms-excel",
            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
            "application/xml",
            "application/octet-stream",
          ],
          "enumNames": Array [
            "",
            "CSV",
            "DOCX",
            "GeoJSON",
            "GML",
            "HTML",
            "JSON",
            "PDF",
            "PNG",
            "XLS",
            "XLSX",
            "XML",
            "Anders",
          ],
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="resources-item__modified"
        >
          
        </div>,
        <div
          className="resources-item__file-size"
        >
          666 B
        </div>,
        <div
          className="resources-item__title"
        >
          Titel
        </div>,
        <div
          className="resources-item__description"
        >
          <span
            className="resources-item__file-type resources-item__file-type--pdf"
          >
            PDF
          </span>
          <span
            className="resources-item__description-text"
          >
            omschrijving
          </span>
        </div>,
      ],
      "className": "resources-item",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "resources-item__modified",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "666 B",
          "className": "resources-item__file-size",
        },
        "ref": null,
        "rendered": "666 B",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Titel",
          "className": "resources-item__title",
        },
        "ref": null,
        "rendered": "Titel",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="resources-item__file-type resources-item__file-type--pdf"
            >
              PDF
            </span>,
            <span
              className="resources-item__description-text"
            >
              omschrijving
            </span>,
          ],
          "className": "resources-item__description",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "PDF",
              "className": "resources-item__file-type resources-item__file-type--pdf",
            },
            "ref": null,
            "rendered": "PDF",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "omschrijving",
              "className": "resources-item__description-text",
            },
            "ref": null,
            "rendered": "omschrijving",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="resources-item__modified"
          >
            
          </div>,
          <div
            className="resources-item__file-size"
          >
            666 B
          </div>,
          <div
            className="resources-item__title"
          >
            Titel
          </div>,
          <div
            className="resources-item__description"
          >
            <span
              className="resources-item__file-type resources-item__file-type--pdf"
            >
              PDF
            </span>
            <span
              className="resources-item__description-text"
            >
              omschrijving
            </span>
          </div>,
        ],
        "className": "resources-item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "resources-item__modified",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "666 B",
            "className": "resources-item__file-size",
          },
          "ref": null,
          "rendered": "666 B",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Titel",
            "className": "resources-item__title",
          },
          "ref": null,
          "rendered": "Titel",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="resources-item__file-type resources-item__file-type--pdf"
              >
                PDF
              </span>,
              <span
                className="resources-item__description-text"
              >
                omschrijving
              </span>,
            ],
            "className": "resources-item__description",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "PDF",
                "className": "resources-item__file-type resources-item__file-type--pdf",
              },
              "ref": null,
              "rendered": "PDF",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "omschrijving",
                "className": "resources-item__description-text",
              },
              "ref": null,
              "rendered": "omschrijving",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
